--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,23 @@
             </intent-filter>
         </activity>
         <activity android:name=".Home">
+        </activity>
+        <activity
+            android:name=".Map"
+            android:label="@string/map_name"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".Jeu"></activity>
+        <activity
+            android:name=".Jeu"
+            android:label="@string/jeu_name">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
